--- a/core/nav.css
+++ b/core/nav.css
@@ -1,5 +1,5 @@
 .nav {
-  padding: 0 10px;
+  padding: 0 16px;
 }
 @media (min-width: 620px) {
   .nav {
