--- a/pages/about.css
+++ b/pages/about.css
@@ -1,7 +1,7 @@
 .main {
   background: #f7f7f7;
 
-  padding: 80px 10px;
+  padding: 80px 16px;
 }
 @media (min-width: 900px) {
   .main {
@@ -11,11 +11,16 @@
 
 .main img {
   border-radius: 8px;
-  width: 320px;
+  width: 100%;
   height: 192px;
   object-fit: cover;
 
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+@media (min-width: 620px) {
+  .main img {
+    width: 320px;
+  }
 }
 
 .main a {
